docs & training: Updates to model registration UX (#1003)
* Edit: Register models in inventory

* Quickstart: Register model developer

* Quickstart: Register model validator

* Updating code snippet images

* Updating developer model details image

* Updating validation report details image

* Admin training: Register demo model

* Developer training: Register demo model

* Validator training: Register demo model

* Cleanup

* Proofreading

* Edit: Manage model stakeholder types on registration

* Edit: Manage model stakeholder types on registration training pt1

* Edit: Manage model stakeholder types on registration training pt2

* Edit

* Edit

* Pulling in latest notebooks from sibling PR

--- a/site/get-started/validator/quickstart-validator.qmd
+++ b/site/get-started/validator/quickstart-validator.qmd
@@ -20,17 +20,15 @@ Use the {{< var validmind.developer >}} to run tests and validate a model, then 
 
 ## Register a model for validation
 
-Typically, you will be asked to validate a champion model that has already been independently registered in the model inventory and submitted to you. 
+Typically, you will be asked to validate a champion model that has already been independently registered in the model inventory and submitted to you.
+
+#### 1. Register a model
 
 For this quickstart, you'll register a dummy model first and assign yourself as the validator to familiarize you with the {{< var validmind.platform >}} interface:
 
 {{< include /get-started/common-steps/_register-your-first-model.qmd >}}
 
-::: {.column-margin}
-![Registration modal with the options filled out for the model validation quickstart](validator-new-model.png){width=90% fig-alt="A screenshot showing the registration modal with the options filled out for the model validation quickstart" .screenshot}
-:::
-
-#### Assign validator credentials
+#### 2. Assign validator credentials
 
 In order to log tests as a validator instead of as a developer, we'll need to adjust your **model stakeholder** permissions.
 
@@ -40,18 +38,18 @@ On the model details page after you've registered your model:
 
 #### Remove yourself as model owner
 
-1. Click on the **[owners]{.smallcaps}** tile, then click on the **x** next to your name.
-2. Click **Save** to apply your changes to that role.
+a. Click on the **[owners]{.smallcaps}** tile, then click on the **x** next to your name.
+b. Click **Save** to apply your changes to that role.
 
 #### Remove yourself as developer
 
-1. Click on the **[developers]{.smallcaps}** tile, then click on the **x** next to your name.
-2. Click **Save** to apply your changes to that role.
+a. Click on the **[developers]{.smallcaps}** tile, then click on the **x** next to your name.
+b. Click **Save** to apply your changes to that role.
 
 #### Add yourself as validator
 
-1. Click on the **[validators]{.smallcaps}** tile, and select your name from the drop-down menu.
-2. Click **Save** to apply your changes to that role.
+a. Click on the **[validators]{.smallcaps}** tile, and select your name from the drop-down menu.
+b. Click **Save** to apply your changes to that role.
 
 :::
 
@@ -59,11 +57,13 @@ On the model details page after you've registered your model:
 ![Model stakeholders with only the [validators]{.smallcaps} assigned](model-stakeholders.png){width=90% fig-alt="A screenshot showing the model stakeholders with only validators assigned" .screenshot}
 :::
 
-{{< include /get-started/common-steps/_get-your-code-snippet.qmd >}}
+#### 3. Select a report template
 
-::: {.column-margin}
-![{{< fa rocket >}} Getting Started page with a sample code snippet](validator-code-snippet.png){width=90% fig-alt="A screenshot showing the Getting Started page with a sample code snippet" .screenshot}
-:::
+{{< include /get-started/common-steps/_select-template.qmd >}}
+
+#### 4. Get your code snippet
+
+{{< include /get-started/common-steps/_get-your-code-snippet.qmd >}}
 
 ## Using the {{< var validmind.developer >}}
 
