--- a/site/guide/configuration/_add-model-stakeholder-types.qmd
+++ b/site/guide/configuration/_add-model-stakeholder-types.qmd
@@ -8,7 +8,10 @@
 
 1. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the stakeholder type.^[Role names and stakeholder type names cannot be duplicated to reduce confusion.]
 
-1. Once you click **{{< fa plus >}} Add Type**, you can proceed with managing the model inventory field^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] permissions associated with that type.
+1. Once you click **{{< fa plus >}} Add Stakeholder Type**, you can:
+
+    - Configure stakeholder type selection available upon model registration^[[Configure stakeholder types on registration](/guide/configuration/manage-model-stakeholder-types.qmd#configure-stakeholder-types-on-registration)]
+    - Manage the model inventory field^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] permissions associated with that type
 
 ::::
 
@@ -21,6 +24,9 @@ a. Click **{{< fa plus >}} Add New Stakeholder Type**.
 
 a. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the stakeholder type.
 
-a. Once you click **{{< fa plus >}} Add Type**, you can proceed with managing the model inventory field permissions associated with that type.
+1. Once you click **{{< fa plus >}} Add Stakeholder Type**, you can:
+
+    - Configure stakeholder type selection available upon model registration
+    - Manage the model inventory field permissions associated with that type
 
 ::::
