--- a/site/guide/configuration/manage-model-stakeholder-types.qmd
+++ b/site/guide/configuration/manage-model-stakeholder-types.qmd
@@ -22,6 +22,10 @@ Please note that the stock **Model Developer**, **Model Owner**, and **Model Val
 
 {{< include /guide/configuration/_add-model-stakeholder-types.qmd >}}
 
+#### Configure stakeholder types on registration
+
+{{< include /guide/configuration/_stakeholder-type-on-registration.qmd >}}
+
 #### Manage stakeholder type permissions
 
 {{< include /guide/configuration/_manage-stakeholder-type-permissions.qmd >}}
