--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -26,6 +26,8 @@ title-slide-attributes:
   data-background-color: "#083E44"
   data-background-image: "../assets/home-hero.svg"
 skip_preview: true
+includes:
+  developer: true
 ---
 
 # Learning objectives {.center}
@@ -163,7 +165,25 @@ To start the documentation process, a model must already be registered in the mo
 
 ::::
 
-{{< include /training/common-slides/_register-binary-classification-model.qmd >}}
+{{< include /training/common-slides/_register-sample-model.qmd >}}
+
+## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Apply a documentation template**
+:::
+
+Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.
+
+1. Click on the name of the model you registered earlier.
+2. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select **Documentation**.
+3. Under **[template]{.smallcaps}**, select `Binary classification`.
+4. Click **Use Template** to apply the template.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
 
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
 
