--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -168,7 +168,7 @@ For this training course, you'll register a dummy model via the **{{< fa plus >}
 
 ::::
 
-{{< include /training/common-slides/_register-binary-classification-model.qmd >}}
+{{< include /training/common-slides/_register-sample-model.qmd >}}
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
@@ -184,6 +184,44 @@ In order to log tests as a validator instead of as a developer, we'll need to ad
 2. Remove yourself as a model owner by clicking on the **[owners]{.smallcaps}** tile, then clicking on the **x** next to your name. Click **Save** to apply your changes to that role.
 3. Remove yourself as a developer by clicking on the **[developers]{.smallcaps}** tile, then clicking on the **x** next to your name. Click **Save** to apply your changes to that role.
 4. Add yourself as a validator by clicking on the **[validators]{.smallcaps}** tile, and selecting your name from the drop-down menu. Click **Save** to apply your changes to that role.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Apply a documentation template**
+:::
+
+Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier for developers.
+
+We'll need this documentation template later for reference as we draft our validation report:
+
+1. Click on the name of the model you registered earlier.
+2. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select **Documentation**.
+3. Under **[template]{.smallcaps}**, select `Binary classification`.
+4. Click **Use Template** to apply the template.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Apply a report template**
+:::
+
+Next, let's select a validation report template. A template predefines sections for your report and provides a general outline to follow, making the validation process much easier.
+
+1. Click on the name of the model you registered earlier.
+2. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select **Validation Report**.
+3. Under **[template]{.smallcaps}**, select `Generic Validation Report`.
+4. Click **Use Template** to apply the template.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
