--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -101,8 +101,8 @@ For this training course, you'll register a dummy model via the **{{< fa plus >}
 :::: {.slideover--r .three-quarters .auto-collapse-10}
 **Register a new model**
 
-1. Select the option for a **New Model**.
-2. You can fill in other options according to your preference.
+1. Enter in some details for your sample model, then click **Next {{< fa angle-right >}}**.
+2. Select your own name under the **[model owner]{.smallcaps}** drop-down.
 3. Click **Register Model** to add the model to your inventory.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
@@ -217,11 +217,15 @@ Please note that the stock **Model Developer**, **Model Owner**, and **Model Val
 
 ::: {.panel-tabset}
 
-### 1. Add model stakeholder types
+### 1. Add types
 
 {{< include /guide/configuration/_add-model-stakeholder-types.qmd >}}
 
-### 2. Manage stakeholder type permissions
+### 2. Manage availability
+
+{{< include /guide/configuration/_stakeholder-type-on-registration.qmd >}}
+
+### 3. Manage permissions
 
 {{< include /guide/configuration/_manage-stakeholder-type-permissions.qmd >}}
 
@@ -251,13 +255,14 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
-**Modify stakeholder field permissions**
+**Modify stakeholder field availability & permissions**
 :::
 
 1. Click on the stakeholder type you added previously.
-2. On the **Permissions** tab, select **Edit Permissions** to modify inventory field permissions to or from that type.
-3. Toggle specific permissions for that stakeholder type by checking or unchecking the boxes next to the permission.
-4. Click **Save Permissions** to apply your changes.
+2. Toggle whether or not you want to select users for this stakeholder type during model registration.
+3. On the **Permissions** tab, select **Edit Permissions** to modify inventory field permissions to or from that type.
+4. Toggle specific permissions for that stakeholder type by checking or unchecking the boxes next to the permission.
+5. Click **Save Permissions** to apply your changes.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
