Setup: Edits to User Action v2 deadlines

--- a/site/guide/workflows/_conditional-requirements.qmd
+++ b/site/guide/workflows/_conditional-requirements.qmd
@@ -26,6 +26,10 @@ Configure conditional requirements for the following step types:^[[Workflow step
     - Click **{{< fa plus >}} Add Rule** to add an independent rule.
     - Click **{{< fa plus-minus >}} Add Group** to add a linked group of rules that all must be true to qualify.
 
+3. Select any **[requested fields]{.smallcaps}** required to be entered by users during the action.
+
+4. Enable a **[user action deadline]{.smallcaps}** for when users should complete this action by.[^action-deadline]
+
 #### {{< fa users >}} Approval
 
 1. Click **{{< fa plus >}} Add Rule** under [approval group]{.smallcaps} to set your `AND` conditions.^[One approver per rule must provide approval.]
@@ -64,6 +68,17 @@ Select when you would like to [resume workflow:]{.smallcaps}
     c. Enter in a **[wait duration]{.smallcaps}** in minutes, hours, days, or months for the delta.
 
 :::
+
+<!-- ADDITIONAL FOOTNOTES -->
+
+[^action-deadline]:
+
+    Under **[end action:]{.smallcaps}** select the type of deadline:
+
+    - After Time Interval
+    - At Specified Date
+    - At Specified Date on Model Field
+    - Time Delta from Specified Date on Model Field
 
 ::::
 
