--- a/site/guide/workflows/_conditional-requirements.qmd
+++ b/site/guide/workflows/_conditional-requirements.qmd
@@ -26,9 +26,16 @@ Configure conditional requirements for the following step types:^[[Workflow step
     - Click **{{< fa plus >}} Add Rule** to add an independent rule.
     - Click **{{< fa plus-minus >}} Add Group** to add a linked group of rules that all must be true to qualify.
 
-3. Select any **[requested fields]{.smallcaps}** required to be entered by users during the action.
+3. Select any **[requested fields]{.smallcaps}**^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] required to be entered by users during the action.
 
-4. Enable a **[user action deadline]{.smallcaps}** for when users should complete this action by.[^action-deadline]
+4. Enable a **[user action deadline]{.smallcaps}** for when users should complete this action by.
+
+    Then, under **[end action:]{.smallcaps}** select the type of deadline:
+
+    - **After Time Interval** — Set the **[amount]{.smallcaps}** and **[unit]{.smallcaps}** of the deadline.
+    - **At Specified Date** — Set the date and time the action should [wait until]{.smallcaps}.
+    - **At Specified Date on Model Field** — Select a date, date time, or calculated **[model field]{.smallcaps}** that defines the deadline.
+    - **Time Delta from Specified Date on Model Field** — Select a date, date time, or calculated **[model field]{.smallcaps}** to calculate a deadline from, then set a **[time delta direction]{.smallcaps}** and **[wait duration]{.smallcaps}**.
 
 #### {{< fa users >}} Approval
 
@@ -68,17 +75,6 @@ Select when you would like to [resume workflow:]{.smallcaps}
     c. Enter in a **[wait duration]{.smallcaps}** in minutes, hours, days, or months for the delta.
 
 :::
-
-<!-- ADDITIONAL FOOTNOTES -->
-
-[^action-deadline]:
-
-    Under **[end action:]{.smallcaps}** select the type of deadline:
-
-    - After Time Interval
-    - At Specified Date
-    - At Specified Date on Model Field
-    - Time Delta from Specified Date on Model Field
 
 ::::
 
