--- a/site/guide/workflows/_workflow-step-types.qmd
+++ b/site/guide/workflows/_workflow-step-types.qmd
@@ -34,7 +34,7 @@ Creates a button that performs an action on behalf of the user.
 | [display action button when]{.smallcaps}  (optional) | Add conditional requirements for displaying this step.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]  |
 | [action button label]{.smallcaps} | Text that displays on your action button. |
 | [request fields]{.smallcaps} (optional) | Include required inventory fields alongside your action.[^step-types-1]  |
-| [user action deadline]{.smallcaps} (optional) | Include a deadline for when users should complete this action by. |
+| [user action deadline]{.smallcaps} (optional) | Include a deadline for when users should complete this action by.^[Toggle **Enable deadline** on to configure a deadline.] |
 | [optional fields]{.smallcaps} (optional) | Include optional inventory fields alongside your action.[^step-types-1]  |
 : **{{< fa arrow-pointer >}} User Action v2** step configuration {.hover tbl-colwidths="[40,60]"}
 
