--- a/site/guide/workflows/_conditional-requirements.qmd
+++ b/site/guide/workflows/_conditional-requirements.qmd
@@ -20,22 +20,25 @@ Configure conditional requirements for the following step types:^[[Workflow step
 
 [optional]{.smallcaps .pink}
 
-1. Under **[display action button when]{.smallcaps}**, set your `AND` and `OR` conditions.
+User display rules
+: 1. Under **[display action button when]{.smallcaps}**, set your `AND` and `OR` conditions.
 2. Add a single independent rule or a linked condition group. These rules and groups can be nested if desired:
 
     - Click **{{< fa plus >}} Add Rule** to add an independent rule.
     - Click **{{< fa plus-minus >}} Add Group** to add a linked group of rules that all must be true to qualify.
 
-3. Select any **[requested fields]{.smallcaps}**^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] required to be entered by users during the action.
+Require model inventory fields
+: Select any **[requested fields]{.smallcaps}**^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] required to be entered by users during the action.
 
-4. Enable a **[user action deadline]{.smallcaps}** for when users should complete this action by.
+Enable user action deadline
+: Toggle **Enabel deadline** on to configure a **[user action deadline]{.smallcaps}** for when users should complete this action by.
 
-    Then, under **[end action:]{.smallcaps}** select the type of deadline:
+Then, under **[end action:]{.smallcaps}** select the type of deadline:
 
-    - **After Time Interval** — Set the **[amount]{.smallcaps}** and **[unit]{.smallcaps}** of the deadline.
-    - **At Specified Date** — Set the date and time the action should [wait until]{.smallcaps}.
-    - **At Specified Date on Model Field** — Select a date, date time, or calculated **[model field]{.smallcaps}** that defines the deadline.
-    - **Time Delta from Specified Date on Model Field** — Select a date, date time, or calculated **[model field]{.smallcaps}** to calculate a deadline from, then set a **[time delta direction]{.smallcaps}** and **[wait duration]{.smallcaps}**.
+- **After Time Interval** — Set the **[amount]{.smallcaps}** and **[unit]{.smallcaps}** of the deadline.
+- **At Specified Date** — Set the date and time the action should [wait until]{.smallcaps}.
+- **At Specified Date on Model Field** — Select a date, date time, or calculated **[model field]{.smallcaps}** that defines the deadline.
+- **Time Delta from Specified Date on Model Field** — Select a date, date time, or calculated **[model field]{.smallcaps}** to calculate a deadline from, then set a **[time delta direction]{.smallcaps}** and **[wait duration]{.smallcaps}**.
 
 #### {{< fa users >}} Approval
 
