--- a/site/guide/workflows/_conditional-requirements.qmd
+++ b/site/guide/workflows/_conditional-requirements.qmd
@@ -31,7 +31,7 @@ Require model inventory fields
 : Select any **[requested fields]{.smallcaps}**^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] required to be entered by users during the action.
 
 Enable user action deadline
-: Toggle **Enabel deadline** on to configure a **[user action deadline]{.smallcaps}** for when users should complete this action by.
+: Toggle **Enable deadline** on to configure a **[user action deadline]{.smallcaps}** for when users should complete this action by.
 
 Then, under **[end action:]{.smallcaps}** select the type of deadline:
 
