--- a/site/guide/workflows/_conditional-requirements.qmd
+++ b/site/guide/workflows/_conditional-requirements.qmd
@@ -23,22 +23,20 @@ Configure conditional requirements for the following step types:^[[Workflow step
 User display rules
 : 1. Under **[display action button when]{.smallcaps}**, set your `AND` and `OR` conditions.
 2. Add a single independent rule or a linked condition group. These rules and groups can be nested if desired:
-
-    - Click **{{< fa plus >}} Add Rule** to add an independent rule.
-    - Click **{{< fa plus-minus >}} Add Group** to add a linked group of rules that all must be true to qualify.
+        - Click **{{< fa plus >}} Add Rule** to add an independent rule.
+        - Click **{{< fa plus-minus >}} Add Group** to add a linked group of rules that all must be true to qualify.
 
 Require model inventory fields
-: Select any **[requested fields]{.smallcaps}**^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] required to be entered by users during the action.
+: - Select any **[requested fields]{.smallcaps}**^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] to be entered by users during the action.
+- **Toggle Optional** to on if the field should be optional and not required.
 
 Enable user action deadline
-: Toggle **Enable deadline** on to configure a **[user action deadline]{.smallcaps}** for when users should complete this action by.
-
-Then, under **[end action:]{.smallcaps}** select the type of deadline:
-
-- **After Time Interval** — Set the **[amount]{.smallcaps}** and **[unit]{.smallcaps}** of the deadline.
-- **At Specified Date** — Set the date and time the action should [wait until]{.smallcaps}.
-- **At Specified Date on Model Field** — Select a date, date time, or calculated **[model field]{.smallcaps}** that defines the deadline.
-- **Time Delta from Specified Date on Model Field** — Select a date, date time, or calculated **[model field]{.smallcaps}** to calculate a deadline from, then set a **[time delta direction]{.smallcaps}** and **[wait duration]{.smallcaps}**.
+: 1. Toggle **Enable deadline** on to configure a **[user action deadline]{.smallcaps}** for when users should complete this action by.
+2. Then, under **[end action:]{.smallcaps}** select the type of deadline:
+        - **After Time Interval** — Set the **[amount]{.smallcaps}** and **[unit]{.smallcaps}** of the deadline.
+        - **At Specified Date** — Set the date and time the action should [wait until]{.smallcaps}.
+        - **At Specified Date on Model Field** — Select a date, date time, or calculated **[model field]{.smallcaps}** that defines the deadline.
+        - **Time Delta from Specified Date on Model Field** — Select a date, date time, or calculated **[model field]{.smallcaps}** to calculate a deadline from, then set a **[time delta direction]{.smallcaps}** and **[wait duration]{.smallcaps}**.
 
 #### {{< fa users >}} Approval
 
