--- a/site/guide/workflows/_add-new-workflows.qmd
+++ b/site/guide/workflows/_add-new-workflows.qmd
@@ -22,7 +22,7 @@ a. Under **[workflow start]{.smallcaps}**, select when the workflow should be in
 
     - **Manually** — Start this workflow manually.^[[Initiate workflows](/guide/workflows/manage-workflows.qmd#initiate-workflows)]
     - **On Model Registration** — Start this workflow when a model is registered in your model inventory.[^on-model-registration]
-    - **On Model Field Change** — Start this workflow on a change to a specific model inventory field.^[[Edit model inventory fields](/guide/model-inventory/edit-model-inventory-fields.qmd)]
+    - **On Custom Field Change** — Start this workflow on a change to a specific model inventory field.[^on-field-change] To configure, select a field under **[model field to monitor]{.smallcaps}**.
 
 a. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow based on the start date in days, weeks, months, or years.
 
@@ -66,6 +66,12 @@ a. Click **Add Finding Workflow** to save your blank workflow, and then [configu
 
     :::
 
+[^on-field-change]:
+
+    [Edit model inventory fields](/guide/model-inventory/edit-model-inventory-fields.qmd)
+    <br></br>
+    When selecting date or date time fields, check **Schedule workflow start for this date** to set the workflow to trigger on the existing date captured in the field rather than when its value changes.
+
 ::::
 
 
@@ -89,7 +95,7 @@ a. Under **[workflow start]{.smallcaps}**, select when the workflow should be in
 
     - **Manually** — Start this workflow manually.
     - **On Model Registration** — Start this workflow when a model is registered in your model inventory.
-    - **On Model Field Change** — Start this workflow on a change to a specific model inventory field.
+    - **On Custom Field Change** — Start this workflow on a change to a specific model inventory field. To configure, select a field under **[model field to monitor]{.smallcaps}**.
 
 a. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow based on the start date in days, weeks, months, or years.
 
