Remove Slack sign-up page & update community resources

--- a/site/about/contributing/validmind-community.qmd
+++ b/site/about/contributing/validmind-community.qmd
@@ -3,87 +3,101 @@ title: "{{< var vm.product >}} community"
 date: last-modified
 aliases:
   - /about/validmind-community.html
+  - /about/contributing/join-community.html
+  - /guide/join-community.html
+  - /about/join-community.html
 ---
 
 Work with financial models, in model risk management (MRM), or are simply enthusiastic about artificial intelligence (AI) and machine learning and how these tools are actively shaping our futures within the finance industry and beyond? Congratulations — you're already part of the {{< var vm.product >}} community! Come learn and play with us.
 
-## Interact with {{< var vm.product >}}
+::: {.callout}
+
+### {{< fa brands slack >}}&ensp;Slack — It's time to say goodbye
+
+Our community Slack channels are being retired **on November 15, 2025**, but our community continues to grow in many other spaces. Explore how you can stay connected with us on this page.
+:::
+
+## Engage
 
 ::: {.panel-tabset}
-
-#### Join our Slack community
-
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-70-ns}
-Be part of building a space for AI risk practitioners and those looking to break into the industry. Get technical support, share ideas, chat about model risk, AI, large language models, and much more!
-
-:::
-
-::: {.w-30-ns}
-
-[Join {{< var vm.product >}} Community Slack](join-community.qmd){target="_blank" .button}
-
-:::
-
-::::
-
-#### Sign up for our newsletter
-
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-80-ns}
-Receive exciting updates from {{< var vm.product >}} and curated material surrounding AI risk management. 
-
-:::
-
-::: {.w-20-ns}
-
-[Subscribe now](https://validmind.com/community/){target="_blank" .button}
-
-:::
-
-::::
 
 #### Read our blog
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-80-ns}
+::: {.w-70-ns .pr4}
 Keep up with the latest news in AI and MRM, as well as announcements and original content from {{< var vm.product >}} on our blog.
-
 :::
 
-::: {.w-20-ns}
-
-[Read blog](https://validmind.com/blog/){target="_blank" .button}
-
+::: {.w-30-ns}
+[Blog](https://validmind.com/blog/){target="_blank" .button}
 :::
 
 ::::
 
-
-#### Attend events with {{< var vm.product >}}
+#### Attend events & workshops
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-80-ns}
-Want to connect with other inquiring minds? Find out what events {{< var vm.product >}} is hosting and attending — we'd be delighted to see you!
+::: {.w-70-ns .pr4}
+Want to connect with other inquiring minds? Find out what exclusive events {{< var vm.product >}} is hosting and attending — we'd be delighted to see you!
 
+Or, join one of our workshops to get free hands-on experience with {{< var vm.product >}}.
 :::
 
-::: {.w-20-ns}
-
-[{{< var vm.product >}} events](https://validmind.com/events/){target="_blank" .button}
-
+::: {.w-30-ns}
+[Events](https://validmind.com/events/){target="_blank" .button}
 :::
 
 ::::
 
+#### Join our webinars
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-70-ns .pr4}
+Join our webinars to learn more about AI risk management and stay up to date with the latest developments in the field.
+:::
+
+::: {.w-30-ns}
+[Webinars](https://validmind.com/webinars/){target="_blank" .button}
+:::
+
+::::
+
+#### Subscribe to our newsletter
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-70-ns .pr4}
+Receive exciting updates from {{< var vm.product >}} and curated material surrounding AI risk management. 
+
+{{< fa hand-point-right >}}&ensp;Sign up at the bottom of the page.
+:::
+
+::: {.w-30-ns}
+[Subscribe](https://validmind.com/community){target="_blank" .button}
+:::
+
+::::
+
+#### Follow us on LinkedIn
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-70-ns .pr4}
+Follow us on LinkedIn for the latest updates, news, and insights in AI risk management.
+:::
+
+::: {.w-30-ns}
+[LinkedIn](https://www.linkedin.com/company/validmind){target="_blank" .button}
+:::
+
+::::
 
 :::
 
-## Build with {{< var vm.product >}}
+## Build
 
 ::: {.callout}
 ## {{< var vm.product >}} style guide
@@ -96,8 +110,7 @@ Here at {{< var vm.product >}}, we embrace an [open source](https://en.wikipedia
 
 As a member of the {{< var vm.product >}} community, we invite you to be part of our process. From our public documentation to the code behind our [{{< var vm.developer >}}](/developer/validmind-library.qmd), we've exposed the wiring for inspection in hopes that great minds think differently and dare to spark change. 
 
-### Contribution ideas
-Please note that all community contributions are subject to review by the {{< var vm.product >}} team. See our [software license agreement](/about/fine-print/license-agreement.qmd) for more details. 
+## Contribute
 
 ::: {.panel-tabset}
 
@@ -105,12 +118,12 @@ Please note that all community contributions are subject to review by the {{< va
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-80-ns}
+::: {.w-70-ns .pr4}
 Have a Jupyter Notebook that works perfectly with {{< var vm.product >}}, or covers a sample use case not already provided? Send it to us!
 
 :::
 
-::: {.w-20-ns}
+::: {.w-30-ns}
 
 [Code samples](/developer/samples-jupyter-notebooks.qmd){.button}
 
@@ -122,15 +135,12 @@ Have a Jupyter Notebook that works perfectly with {{< var vm.product >}}, or cov
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-80-ns}
+::: {.w-70-ns .pr4}
 Live by the {{< var vm.developer >}}, and have an idea that will streamline the experience for others? Let us know!
-
 :::
 
-::: {.w-20-ns}
-
+::: {.w-30-ns}
 [{{< var validmind.developer >}}](https://github.com/validmind/validmind-library/){.button}
-
 :::
 
 ::::
@@ -139,17 +149,20 @@ Live by the {{< var vm.developer >}}, and have an idea that will streamline the 
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-70-ns}
+::: {.w-70-ns .pr4}
 Spot a typo, or have identified a gap in instruction you think would be beneficial for the community to fill? Submit an edit to our GitHub repository! 
-
 :::
 
 ::: {.w-30-ns}
-
 [{{< fa brands github >}} validmind/documentation](https://github.com/validmind/documentation){.button}
-
 :::
 
 ::::
 
 :::
+
+Please note that all community contributions are subject to review by the {{< var vm.product >}} team. See our [software license agreement](/about/fine-print/license-agreement.qmd) for more details. 
+
+## Join our team
+
+We're always looking for talented individuals to join our team. If you're interested in working with us, check out our [careers page](https://validmind.com/careers/).
