Minor consistency edit

--- a/site/about/contributing/validmind-community.qmd
+++ b/site/about/contributing/validmind-community.qmd
@@ -12,7 +12,7 @@ Work with financial models, in model risk management (MRM), or are simply enthus
 
 ::: {.callout}
 
-### {{< fa brands slack >}}&ensp;Slack — It's time to say goodbye
+### {{< fa brands slack >}}&ensp;Slack, it's time to say goodbye.
 
 Our community Slack channels are being retired **on November 15, 2025**, but our community continues to grow in many other spaces. Explore how you can stay connected with us on this page.
 :::
