Setup: Manage finding severities

--- a/site/guide/model-validation/managing-model-validation.qmd
+++ b/site/guide/model-validation/managing-model-validation.qmd
@@ -4,13 +4,14 @@ date: last-modified
 listing:
   - id: validation
     type: grid
-    grid-columns: 3
+    grid-columns: 2
     max-description-length: 250
     sort: false
     fields: [title, description]
     contents:
     - manage-validation-guidelines.qmd
     - manage-finding-types.qmd
+    - manage-finding-severities.qmd
     - manage-model-finding-fields.qmd
 ---
 
