Docs: Manage finding severities

--- a/site/guide/model-validation/manage-finding-severities.qmd
+++ b/site/guide/model-validation/manage-finding-severities.qmd
@@ -4,3 +4,81 @@ date: last-modified
 ---
 
 Configure the severities available to the findings logged on models to ensure that they reflect your organization's tracking requirements.
+
+::: {.attn}
+
+## Prerequisites
+
+- [x] {{< var link.login >}}
+- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^1]
+
+:::
+
+## Add finding severities
+
+By default, {{< var validmind.platform >}} provides three suggested finding severities — [high]{.bubble .smallcaps}, [medium]{.bubble .smallcaps}, and [low]{.bubble .smallcaps}.
+
+To add additional severities:
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Findings, select **Finding Severities**.
+
+3. Click **{{< fa plus >}} Add Finding Severity**.
+
+4. Enter a **[name]{.smallcaps}** and select a **[color]{.smallcaps}** for the severity.
+
+5. Click **Add Severity** to create the severity.
+
+    Once added, [reorder the severities](#reorder-finding-severities) as required.
+
+## Edit finding severities
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Findings, select **Finding Severities**.
+
+3. Hover over the severity you would like to edit.
+
+4. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select **{{< fa pencil >}} Edit Severity**.
+
+5. Make your changes to the **[name]{.smallcaps}** and **[color]{.smallcaps}** of the severity.
+
+6. Click **Update Severity** to apply your edits.
+
+
+## Reorder finding severities
+
+Finding severities range from most severe at the top to least severe at the bottom.
+
+To reorder severities:
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Findings, select **Finding Severities**.
+
+3. Click and hold to drag a severity up or down.
+
+4. Click **Save** to apply the order.
+
+## Remove finding severities
+
+::: {.callout-important title="Removal of finding severities is permanent."}
+Severities can only be deleted if they are not in use by any findings.
+
+:::
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Findings, select **Finding Severities**.
+
+3. Hover over the severity you would like to delete.
+
+4. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select [**{{< fa trash-can >}} Delete Severity**]{.red}.
+
+5. After you confirm, the severity will be removed from the list.
+
+
+<!-- FOOTNOTES -->
+
+[^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
