Training: Manage finding severities

--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -321,6 +321,55 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
+## {.scrollable}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Manage finding severities
+
+::: {.tc}
+[Learn more ...](/guide/model-validation/manage-finding-severities.qmd){.button target="_blank"}
+:::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+:::
+
+::: {.column width="70%" .bl .pl4 .f3}
+
+{{< include /guide/model-validation/_finding-severities.qmd >}}
+
+::: {.panel-tabset}
+
+### Add finding severities
+
+{{< include /guide/model-validation/_add-finding-severities.qmd >}}
+
+### Reorder finding severities
+
+{{< include /guide/model-validation/_reorder-finding-severities.qmd >}}
+
+:::
+
+:::
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings/finding-severities" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--l .three-quarters .auto-collapse-10}
+::: {.tc}
+**Add a finding severity**
+:::
+
+1. Click **{{< fa plus >}} Add Finding Severity**.
+2. Enter a **[name]{.smallcaps}** and select a **[color]{.smallcaps}** for the severity.
+3. Click **Add Severity** to create the severity.
+4. Once added, reorder the severities as required.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
 # Customize reusable templates {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable}
