--- a/site/guide/model-validation/manage-finding-severities.qmd
+++ b/site/guide/model-validation/manage-finding-severities.qmd
@@ -3,7 +3,7 @@ title: "Manage finding severities"
 date: last-modified
 ---
 
-Configure the severities available to the findings logged on models to ensure that they reflect your organization's tracking requirements.
+{{< include /guide/model-validation/_finding-severities.qmd >}}
 
 ::: {.attn}
 
@@ -16,21 +16,7 @@ Configure the severities available to the findings logged on models to ensure th
 
 ## Add finding severities
 
-By default, {{< var validmind.platform >}} provides three suggested finding severities — [high]{.bubble .smallcaps}, [medium]{.bubble .smallcaps}, and [low]{.bubble .smallcaps}.
-
-To add additional severities:
-
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under Findings, select **Finding Severities**.
-
-3. Click **{{< fa plus >}} Add Finding Severity**.
-
-4. Enter a **[name]{.smallcaps}** and select a **[color]{.smallcaps}** for the severity.
-
-5. Click **Add Severity** to create the severity.
-
-    Once added, [reorder the severities](#reorder-finding-severities) as required.
+{{< include /guide/model-validation/_add-finding-severities.qmd >}}
 
 ## Edit finding severities
 
@@ -49,17 +35,7 @@ To add additional severities:
 
 ## Reorder finding severities
 
-Finding severities range from most severe at the top to least severe at the bottom.
-
-To reorder severities:
-
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under Findings, select **Finding Severities**.
-
-3. Click and hold to drag a severity up or down.
-
-4. Click **Save** to apply the order.
+{{< include /guide/model-validation/_reorder-finding-severities.qmd >}}
 
 ## Remove finding severities
 
