Cleaning up community page

--- a/site/about/contributing/validmind-community.qmd
+++ b/site/about/contributing/validmind-community.qmd
@@ -21,74 +21,74 @@ Our community Slack channels are being retired **on November 15, 2025**, but our
 
 ::: {.panel-tabset}
 
-#### Read our blog
+#### Blog
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-70-ns .pr4}
+::: {.w-90-ns .pr4}
 Keep up with the latest news in AI and MRM, as well as announcements and original content from {{< var vm.product >}} on our blog.
 :::
 
-::: {.w-30-ns}
-[Blog](https://validmind.com/blog/){target="_blank" .button}
+::: {.w-10-ns .tr}
+[{{< fa blog >}} Blog](https://validmind.com/blog/){target="_blank" .button}
 :::
 
 ::::
 
-#### Attend events & workshops
+#### Events & workshops
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-70-ns .pr4}
+::: {.w-80-ns .pr4}
 Want to connect with other inquiring minds? Find out what exclusive events {{< var vm.product >}} is hosting and attending — we'd be delighted to see you!
 
 Or, join one of our workshops to get free hands-on experience with {{< var vm.product >}}.
 :::
 
-::: {.w-30-ns}
-[Events](https://validmind.com/events/){target="_blank" .button}
+::: {.w-20-ns .tr}
+[{{< fa calendar-check >}} Events](https://validmind.com/events/){target="_blank" .button}
 :::
 
 ::::
 
-#### Join our webinars
+#### Webinars
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-70-ns .pr4}
+::: {.w-80-ns .pr4}
 Join our webinars to learn more about AI risk management and stay up to date with the latest developments in the field.
 :::
 
-::: {.w-30-ns}
-[Webinars](https://validmind.com/webinars/){target="_blank" .button}
+::: {.w-20-ns .tr}
+[{{< fa users-rectangle >}} Webinars](https://validmind.com/webinars/){target="_blank" .button}
 :::
 
 ::::
 
-#### Subscribe to our newsletter
+#### Newsletter
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-70-ns .pr4}
+::: {.w-80-ns .pr4}
 Receive exciting updates from {{< var vm.product >}} and curated material surrounding AI risk management. 
 :::
 
-::: {.w-30-ns}
-[Subscribe](https://validmind.com/community){target="_blank" .button}
+::: {.w-20-ns .tr}
+[{{< fa newspaper >}} Subscribe](https://validmind.com/community){target="_blank" .button}
 :::
 
 ::::
 
-#### Follow us on LinkedIn
+#### LinkedIn
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-70-ns .pr4}
+::: {.w-80-ns .pr4}
 Follow us on LinkedIn for the latest updates, news, and insights in AI risk management.
 :::
 
-::: {.w-30-ns}
-[LinkedIn](https://www.linkedin.com/company/validmind){target="_blank" .button}
+::: {.w-20-ns .tr}
+[{{< fa brands linkedin >}} LinkedIn](https://www.linkedin.com/company/validmind){target="_blank" .button}
 :::
 
 ::::
@@ -116,14 +116,14 @@ As a member of the {{< var vm.product >}} community, we invite you to be part of
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-70-ns .pr4}
+::: {.w-80-ns .pr4}
 Have a Jupyter Notebook that works perfectly with {{< var vm.product >}}, or covers a sample use case not already provided? Send it to us!
 
 :::
 
-::: {.w-30-ns}
+::: {.w-20-ns .tr}
 
-[Code samples](/developer/samples-jupyter-notebooks.qmd){.button}
+[{{< fa code >}}  Code samples](/developer/samples-jupyter-notebooks.qmd){.button}
 
 :::
 
@@ -133,12 +133,12 @@ Have a Jupyter Notebook that works perfectly with {{< var vm.product >}}, or cov
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-70-ns .pr4}
+::: {.w-80-ns .pr4}
 Live by the {{< var vm.developer >}}, and have an idea that will streamline the experience for others? Let us know!
 :::
 
-::: {.w-30-ns}
-[{{< var validmind.developer >}}](https://github.com/validmind/validmind-library/){.button}
+::: {.w-20-ns .tr}
+[{{< fa circle-check >}} {{< var validmind.developer >}}](https://github.com/validmind/validmind-library/){.button}
 :::
 
 ::::
@@ -151,7 +151,7 @@ Live by the {{< var vm.developer >}}, and have an idea that will streamline the 
 Spot a typo, or have identified a gap in instruction you think would be beneficial for the community to fill? Submit an edit to our GitHub repository! 
 :::
 
-::: {.w-30-ns}
+::: {.w-30-ns .tr}
 [{{< fa brands github >}} validmind/documentation](https://github.com/validmind/documentation){.button}
 :::
 
