Docs: Default document type templates

--- a/site/guide/templates/manage-document-types.qmd
+++ b/site/guide/templates/manage-document-types.qmd
@@ -26,17 +26,17 @@ These stock document types cannot be deleted, only edited.
 
 3. Click **{{< fa plus >}} Add Document Type**.
 
-4. Enter in the document type details: 
+4. Enter in the document type details:
 
     - Provide a **[name]{.smallcaps}** and an optional **[description]{.smallcaps}**.
-    - Indicate the display **[order]{.smallcaps}** of this document type in lists and menus.
-    - Toggle whether this document type should **[auto initialize when model is created]{.smallcaps}**.
+    - Toggle whether this document type should be automatically created **[when model is registered]{.smallcaps}**.
     - Select the model stakeholder types[^2] that should have **[write permissions]{.smallcaps}** for this document type.
+    - Toggle an optional **[default template]{.smallcaps}** for this document type.[^3]
 
 5. Click **Create Document Type** to add your document type.
 
 ::: {.callout}
-Once created, customize the available templates for your document type.[^3]
+Once created, customize the available templates for your document type.[^4]
 
 :::
 
@@ -54,7 +54,7 @@ Once created, customize the available templates for your document type.[^3]
 
 a. Hover over the document type you want to edit.
 
-b. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select **{{< fa pencil >}} Edit** to change your document type's details.
+b. When the **{{< fa ellipsis-vertical >}}** appears under the Actions column, click on it and select **{{< fa pencil >}} Edit** to change your document type's details.
 
 c. Click **Update Document Type** to apply your changes.
 
@@ -62,7 +62,7 @@ c. Click **Update Document Type** to apply your changes.
 
 a. Hover over the document type you want to delete.
 
-b. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select [**{{< fa trash-can >}} Delete**]{.red} to remove the document type.
+b. When the **{{< fa ellipsis-vertical >}}** appears under the Actions column, click on it and select [**{{< fa trash-can >}} Delete**]{.red} to remove the document type.
 
 c. After you confirm, the document type will be deleted.
 
@@ -81,7 +81,9 @@ In order to delete a document type, there must be no models using that document 
 
 [^2]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
-[^3]: [Customize document templates](customize-document-templates.qmd)
+[^3]: Select a template to be assigned as default from the drop-down menu.
+
+[^4]: [Customize document templates](customize-document-templates.qmd)
 
 
 
