--- a/site/guide/workflows/_review-workflow-history.qmd
+++ b/site/guide/workflows/_review-workflow-history.qmd
@@ -25,7 +25,7 @@ Review timelines of workflows running or previously run:
 
 #### On findings
 
-On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings)] locate the [active workflows]{.smallcaps} section.
+On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings)] locate the Workflows section.
 
 If workflows are running or have previously run on your finding, you can:
 
@@ -70,7 +70,7 @@ Review timelines of workflows running or previously run:
 
 #### On findings
 
-On the [details page of your finding](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings){target="_blank"}, locate the [active workflows]{.smallcaps} section.
+On the [details page of your finding](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings){target="_blank"}, locate the Workflows section.
 
 If workflows are running or have previously run on your finding, you can:
 
