--- a/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
@@ -327,7 +327,7 @@ Run workflows manually
 :::
 
 1. Select the name of your model you registered for this course to open up the model details page.
-2. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
+2. On the landing page of your model, locate the Workflows section.
 3. Click **{{< fa arrow-right-arrow-left >}} See All Workflows**.
 4. Select **{{< fa arrow-right >}} Run Workflow** for the workflow you configured earlier, then select **Run Now** under **[workflow start]{.smallcaps}**.
 5. Click **{{< fa arrow-right >}} Run Workflow Now** to confirm.
