--- a/site/guide/workflows/_initiate-workflows.qmd
+++ b/site/guide/workflows/_initiate-workflows.qmd
@@ -51,7 +51,7 @@ To manually resume a workflow in a {{< fa clock >}} Wait state:^[[Conditional re
 
 1. Select a model or find your model by applying a filter or searching for it.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)]
 
-1. On the landing page of your model, locate the Workflows section.
+1. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
 
 1. For the workflow you'd like to manually advance, click **{{< fa arrow-right-arrow-left >}} Resume Workflow** to open up the workflow's step overview.
 
@@ -59,7 +59,7 @@ To manually resume a workflow in a {{< fa clock >}} Wait state:^[[Conditional re
 
 #### On findings
 
-1. On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings)] locate the Workflows section.
+1. On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings)] locate the [active workflows]{.smallcaps} section.
 
 1. For the workflow you'd like to manually advance, click **{{< fa arrow-right-arrow-left >}} Resume Workflow** to open up the workflow's step overview.
 
