Edit: Workflow states for finding workflows

--- a/site/guide/workflows/_workflow-states.qmd
+++ b/site/guide/workflows/_workflow-states.qmd
@@ -7,15 +7,39 @@ Add workflow states by either while configuring a **{{< fa wifi >}} Workflow Sta
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Workspace, select **Workflow States**.
+1. Under Workspace, select **Workflow States**.
 
-3. Click on the workflow you'd like to modify workflow states for.
+1. Select the tab for the type of state to add:
 
-4. Click **{{< fa gear >}} Add New Workflow State**.
+    - **Model Workflows** — Workflow states that apply to model workflows.
+    - **Finding Workflows** — Workflow states that apply to finding workflows.
 
-5. Enter in a **[name]{.smallcaps}** and a **[description]{.smallcaps}**, then select a **[color]{.smallcaps}** for your workflow state.
+1. Click on the workflow you'd like to modify workflow states for.
 
-6. Click **Save** to create the workflow state.
+1. Click **{{< fa gear >}} Add Workflow State**.
+
+1. Enter in a **[name]{.smallcaps}** and a **[description]{.smallcaps}**, then select a **[color]{.smallcaps}** for your workflow state.
+
+1. Click **Save** to create the workflow state.
+
+#### Edit workflow states
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+1. Under Workspace, select **Workflow States**.
+
+1. Select the tab for the type of state you want to edit:
+
+    - **Model Workflows** — Workflow states that apply to model workflows.
+    - **Finding Workflows** — Workflow states that apply to finding workflows.
+
+1. Click on the workflow you'd like to edit the states for.
+
+1. Hover over the workflow state until **{{< fa pencil >}} Edit Details** appears, then click on it.
+
+1. Make your changes to the **[name]{.smallcaps}**, **[description]{.smallcaps}**, and **[color]{.smallcaps}** for your workflow state.
+
+1. Click **Save** to apply your changes.
 
 #### Delete workflow states
 
@@ -25,13 +49,18 @@ If a state is or was previously in use  on a workflow within a {{< fa wifi >}} W
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Workspace, select **Workflow States**.
+1. Under Workspace, select **Workflow States**.
 
-3. Click on the workflow you'd like to delete workflow states for.
+1. Select the tab for the type of state you want to delete:
 
-4. Hover over the workflow state until the **{{< fa trash-can >}}** appears, then click on it.
+    - **Model Workflows** — Workflow states that apply to model workflows.
+    - **Finding Workflows** — Workflow states that apply to finding workflows.
 
-5. After you confirm, the workflow state will be removed.
+1. Click on the workflow you'd like to delete workflow states for.
+
+1. Hover over the workflow state until **{{< fa trash-can >}} Delete Workflow State** appears, then click on it.
+
+1. After you confirm, the workflow state will be removed.
 
 ::::
 
