--- a/site/guide/workflows/_workflow-states.qmd
+++ b/site/guide/workflows/_workflow-states.qmd
@@ -58,7 +58,7 @@ If a state is or was previously in use  on a workflow within a {{< fa wifi >}} W
 
 1. Click on the workflow you'd like to delete workflow states for.
 
-1. Hover over the workflow state until **{{< fa trash-can >}} Delete Workflow State** appears, then click on it.
+1. Hover over the workflow state until [**{{< fa trash-can >}} Delete Workflow State**]{.red} appears, then click on it.
 
 1. After you confirm, the workflow state will be removed.
 
